WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73919
Layout Test inspector/debugger/dom-breakpoints.html fails on chromium linux debug with ENABLE(MUTATION_OBSERVERS)
https://bugs.webkit.org/show_bug.cgi?id=73919
Summary
Layout Test inspector/debugger/dom-breakpoints.html fails on chromium linux d...
Vsevolod Vlasov
Reported
2011-12-06 06:30:32 PST
The following layout test is failing on chromium linux debug inspector/debugger/dom-breakpoints.html Probable cause:
http://trac.webkit.org/changeset/102100/
Attachments
Patch
(7.03 KB, patch)
2011-12-06 15:59 PST
,
Adam Klein
no flags
Details
Formatted Diff
Diff
Move ifdef guards appropriately
(7.91 KB, patch)
2011-12-06 16:35 PST
,
Adam Klein
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Vsevolod Vlasov
Comment 1
2011-12-06 06:44:47 PST
Marked test as crashing for now: <
http://trac.webkit.org/changeset/102133
>
Vsevolod Vlasov
Comment 2
2011-12-06 09:06:54 PST
Removed expectations now that the original patch was rolled out. Committed
r102144
: <
http://trac.webkit.org/changeset/102144
>
Adam Klein
Comment 3
2011-12-06 09:21:13 PST
Here's the stack trace ASSERTION FAILED: s_currentDecl == decl third_party/WebKit/Source/WebCore/css/CSSMutableStyleDeclaration.cpp(59) : WebCore::<unnamed>::StyleAttributeMutationScope::StyleAttributeMutationScope(WebCore::CSSMutableStyleDeclaration*) 1 0x109475c 2 0x109799d 3 0x10978d2 4 0x10e768e 5 0x183550e 6 0x6181ec62c01 [38988:38988:8694432581833:ERROR:process_util_posix.cc(139)] Received signal 11 base::debug::StackTrace::StackTrace() [0x715496] base::(anonymous namespace)::StackDumpSignalHandler() [0x6d1b8d] 0x7f2cbffd8af0 WebCore::(anonymous namespace)::StyleAttributeMutationScope::StyleAttributeMutationScope() [0x1094761] WebCore::CSSMutableStyleDeclaration::setProperty() [0x109799d] WebCore::CSSMutableStyleDeclaration::setProperty() [0x10978d2] WebCore::CSSStyleDeclaration::setProperty() [0x10e768e] WebCore::CSSStyleDeclarationInternal::setPropertyCallback() [0x183550e] 0x6181ec62c01
Adam Klein
Comment 4
2011-12-06 15:59:46 PST
Created
attachment 118131
[details]
Patch
Adam Klein
Comment 5
2011-12-06 16:04:14 PST
Adding pfeldman for inspector knowledge. In some cases, this patch will cause InspectorInstrumentation::didInvalidateStyleAttr() to be called slightly later, but it should still be called whenever it would have been called before.
Early Warning System Bot
Comment 6
2011-12-06 16:22:41 PST
Comment on
attachment 118131
[details]
Patch
Attachment 118131
[details]
did not pass qt-ews (qt): Output:
http://queues.webkit.org/results/10736895
Gyuyoung Kim
Comment 7
2011-12-06 16:34:37 PST
Comment on
attachment 118131
[details]
Patch
Attachment 118131
[details]
did not pass efl-ews (efl): Output:
http://queues.webkit.org/results/10746079
Adam Klein
Comment 8
2011-12-06 16:35:04 PST
Created
attachment 118137
[details]
Move ifdef guards appropriately
WebKit Review Bot
Comment 9
2011-12-07 12:04:07 PST
Comment on
attachment 118137
[details]
Move ifdef guards appropriately Clearing flags on attachment: 118137 Committed
r102264
: <
http://trac.webkit.org/changeset/102264
>
WebKit Review Bot
Comment 10
2011-12-07 12:04:13 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug